--- a/_Social-Media.scss
+++ b/_Social-Media.scss
@@ -2,10 +2,14 @@
     border: solid black 1px;
     padding: 10px 30px;}
 
-@mixin moving {
-    animation-name: move;
+@mixin movingleft {
+    animation-name: left;
     animation-duration: 1s;
     animation-fill-mode: both;}
+
+@mixin movingright {
+    animation-name: right;
+    animation-duration: 1s;}
 
 .social-media {
     color:white;
@@ -15,23 +19,28 @@
 
     &__blog{
     @include styling();
-    background-color: $background-color1;}
+    background-color: $background-color1;
+    @include movingright();}
 
     &__twitter{ 
     @include styling();
-    background-color: $background-color2;}
+    background-color: $background-color2;
+    @include movingright();}
 
     &__linkedin{ 
     @include styling();
-    background-color: $background-color3;}
+    background-color: $background-color3;
+    @include movingright();}
 
     &__facebook{ 
     @include styling();
-    background-color: $background-color4;}
+    background-color: $background-color4;
+    @include movingright();}
 
     &__github{ 
     @include styling();
-    background-color: $background-color5;}
+    background-color: $background-color5;
+    @include movingright();}
 
     &__blog::before {
     font-family: "Font Awesome 5 Free"; 
@@ -58,23 +67,27 @@
     padding-left: 30px;}
 
     &__blog:hover{
-    @include moving();}
+    @include movingleft();}
 
     &__twitter:hover{
-    @include moving();}
+    @include movingleft();}
 
     &__linkedin:hover{
-    @include moving();}
+    @include movingleft();}
 
     &__facebook:hover{
-    @include moving();}
+    @include movingleft();}
 
     &__github:hover{
-    @include moving();}}
+    @include movingleft();}}
 
-    @keyframes move{
+    @keyframes left{
     from { transform: translateX(0px);}
-    to {transform: translateX(-355px);}}
+    to {transform: translateX(-350px);}}
 
+    @keyframes right{
+        from {transform: translateX(-350px);}
+        to {transform: translateX(0px);}}
+    
 span {
     padding: 20px;}
