--- a/Stylesheet.scss
+++ b/Stylesheet.scss
@@ -2,11 +2,12 @@
 
 .container {
     background-color: $background-color6;
-    width: 101%;
-    height: 95vh;
+    width: 100%;
+    height: 97vh;
     display: flex;
     justify-content: flex-end;
-    align-items: center;}
+    align-items: center;
+    overflow: hidden;}
 
 @import './Social-Media';
 
